--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.1539.0",
     "axios": "^1.6.5",
     "chalk": "^5.3.0",
+    "chart.js": "^3.9.1",
     "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "date-fns": "^3.6.0",
@@ -19,6 +20,10 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "instafeed.js": "^2.0.0",
+    "moment-timezone": "^0.5.48",
+    "register-service-worker": "^1.7.2",
+    "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.2",
     "moment-timezone": "^0.5.45",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
